# ITMO_programming_tools_lab4

./: .gitignore  CMakeLists.txt  README.md  testCPP.py  testTS.py
.github/workflows/: main.yml  test.yml
CPPProject/: CMakeLists.txt
CPPProject/src/: segment_tree.h
TSProject/: package.json  project.ts
src/: CMakeLists.txt  segment_tree.cpp
tests/: testCPP.py  test_segment_tree.py
